# snack_api

./: README.md  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
snack_api_project/: asgi.py  settings.py  urls.py  wsgi.py
snacks/: models.py  permissions.py  serializer.py  tests.py  urls.py  views.py
snacks/migrations/: 0001_initial.py
