[tool.poetry]
name = "snacksapi"
version = "0.1.0"
description = ""
authors = ["Joseph Nguyen <josephnguyen2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.5"
djangorestframework = "^3.13.1"
Django = "^4.0.1"
psycopg2-binary = "^2.9.3"
djangorestframework-simplejwt = "^5.0.0"
gunicorn = "^20.1.0"
whitenoise = "^5.3.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
